[tool.poetry]
name = "gh-dash"
version = "0.1.0"
description = ""
authors = ["Riley Mathews <rileymathews80@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.4"
dataclasses-json = "^0.6.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
